# sandsuet-checker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  acknowledgement.txt  pyproject.toml  sandsuet_spec_precis.md
examples/: fetch_sample.py
sandsuet_checker/: __init__.py  _version.py  checker.py  cli.py
tests/: checker_test.py
