[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandsuet-checker"
version = "0.0.9000"
description = "Compliance checker for the sandsuet v1.0.0 analysis-ready data specification"
requires-python = ">=3.9"
dependencies = [
    "netCDF4",
    "numpy",
    "cf-units",
    "tqdm",
]

[project.optional-dependencies]
testing = ["pytest"]

[project.scripts]
sandsuet-checker = "sandsuet_checker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sandsuet_checker*"]

[tool.pytest.ini_options]
testpaths = ["sandsuet_checker", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = [
  "--tb=native",
  "--durations=16",
  "--strict-markers",
  "--doctest-modules",
  "-vvv",
]
